src/objects/Refund__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <description>Contact Email</description>
        <formula>Contact__r.Email</formula>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Refunds</relationshipLabel>
        <relationshipName>Refunds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Refunds</relationshipLabel>
        <relationshipName>Refunds</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>QB_Invoice__c</fullName>
        <externalId>true</externalId>
        <label>QB Invoice #</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QB_Sync_Date__c</fullName>
        <label>QB Sync Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>QB_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>QB Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Refund_Approvee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Refund Approvee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Refunds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Refund</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Refunds</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Contact__c</columns>
        <columns>Contact_Email__c</columns>
        <columns>QB_Invoice__c</columns>
        <columns>QB_Sync_Date__c</columns>
        <columns>Amount__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>Refunds Chart</label>
    </listViews>
    <nameField>
        <displayFormat>REF-{00000}</displayFormat>
        <label>Refunds Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Refunds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>